[tool.poetry]
name = "plotting"
version = "0.1.0"
description = "High level functions for publication ready plots."
authors = ["Ruben Doerfel"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
