[tool.poetry]
name = "plotting"
version = "0.1.0"
description = "High level functions for publication ready plots."
license = "MIT"
authors = ["Ruben Doerfel <ruben.dorfel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--strict-markers --strict-config"

[tool.coverage.run]
source = ["plotting"]
omit = [
    "*/test*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
show_missing = true
precision = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"